--- a/app/javascript/dashboard/i18n/locale/en/settings.json
+++ b/app/javascript/dashboard/i18n/locale/en/settings.json
@@ -372,6 +372,7 @@
     },
     "CHANNELS": "Channels",
     "SALES_FUNNEL": "Sales Funnel",
+    "PRODUCTION_QUEUE": "Production Queue",
     "SET_AUTO_OFFLINE": {
       "TEXT": "Mark offline automatically",
       "INFO_TEXT": "Let the system automatically mark you offline when you aren't using the app or dashboard.",
