--- a/app/javascript/dashboard/i18n/locale/en/contact.json
+++ b/app/javascript/dashboard/i18n/locale/en/contact.json
@@ -498,7 +498,7 @@
     },
     "SIDEBAR": {
       "TABS": {
-        "ATTRIBUTES": "Attributes",
+        "CRM": "CRM",
         "HISTORY": "History",
         "NOTES": "Notes",
         "MERGE": "Merge"
